add some platcube text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>PlatCube Homepage</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/agency.css" rel="stylesheet">
 
 </head>
 
@@ -30,27 +30,27 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">PlatCube</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
+        메뉴
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#services">회사소개</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">프로젝트</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">지난 프로젝트</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#team">팀</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">문의하기</a>
           </li>
         </ul>
       </div>
@@ -61,9 +61,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">플랫큐브는 다양한 방향으로 플랫폼을 기획하고 구축합니다.</div>
+        <div class="intro-heading text-uppercase">WE BUILD YOUR OWN PLATFORM</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Download the App</a>
       </div>
     </div>
   </header>
@@ -73,34 +73,36 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Technology at Your Fingertips</h2>
+          <h3 class="section-subheading text-muted">특수한 환경이라도 플랫큐브의 기술력과 함께라면 가능합니다.</h3>
+          <h3 class="section-subheading text-muted">더이상 기술적으로 구현 불가능한 플랫폼은 없습니다.</br> 개발자와 사용자가 함께 구축하고자 하는 플랫폼을 이해하며 개발 전 단계에서 사용자가 참여하여 쉽게 쓰일 수 있는 UI, 꼭 필요한 기능을 구현합니다.</h3>
+          <h3 class="section-subheading text-muted">플랫큐브의 리깅 프로그램은 건설 산업 현장에서 쓰이는 리깅 프로그램을 모바일 환경에서 기술적으로 구현하였습니다.</br> 더 나아가 정비 솔루션까지 함께 제공할 예정입니다.</h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-mobile-alt fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Mobile Environment</h4>
+          <p class="text-muted">인터넷이 있는 환경 어디에서나 쓸 수 있는 플랫폼을 만들고 있습니다.새롭고 다양한 기능 개발을 위해 많은 노력을 기울이고 있습니다. </p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-palette fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">The best design</h4>
+          <p class="text-muted">쉽고 편한 디자인으로 만들수 있는 능력이 경쟁력입니다. 사용자 UI에 초점을 두어 만족도 높은 최상의 결과를 만들겠습니다.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Top Security</h4>
+          <p class="text-muted">플랫폼 제작 목적은 고객이 편안히 사용할 수 있는 기능을 만드는 것입니다. 고객의 니즈에 맞추어 개발하겠습니다.</p>
         </div>
       </div>
     </div>
@@ -111,8 +113,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">프로젝트</h2>
+          <h3 class="section-subheading text-muted">고객의 니즈에 맞춘 다양한 솔루션</h3>
         </div>
       </div>
       <div class="row">
@@ -123,11 +125,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/01-crane.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Crane Rigging Program Maintenace Solution</h4>
+            <p class="text-muted">크레인 리깅 프로그램</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -137,11 +139,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/02-test.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Miner Monitoring System</h4>
+            <p class="text-muted">코인 채굴 모니터링 시스템</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,50 +156,8 @@
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>WebPage Development</h4>
+            <p class="text-muted">웹 홈페이지 제작</p>
           </div>
         </div>
       </div>
@@ -454,7 +414,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <a href="#">
+            <img class="img-fluid d-block mx-auto" src="img/logos/platcube.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-4">
+          <p> 플랫큐브 대표 박동현 </br> 사업자번호 713-33-00333 </br> 주소 수원시 영통구 이의동</p>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -486,6 +451,9 @@
           </ul>
         </div>
       </div>
+      <div>
+        <span class="copyright">Copyright &copy; 2019 by Platcube Startup. Proudly created with Platcube.</span>
+      </div>
     </div>
   </footer>
 
@@ -505,14 +473,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Crane Rigging Program Maintenance Solution</h2>
+                <p class="item-intro text-muted">크레인 리깅 및 유지보수 프로그램</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-crane.jpg" alt="">
+                <p>크레인 리깅 프로그램은 이동식 크레인을 사용하는 환경에서 반드시 써야하는 작업 시뮬레이션 프로그램입니다. 기존의 환경은 데스크탑에서만 있는 캐드 프로그램과 크레인 제원표를 함께 보면서 작업 시뮬레이션을 설정하였습니다. 이를 한번에 묶어 모바일 앱으로 만들어 작업시간을 획기적으로 단축시켰습니다.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Threads</li>
-                  <li>Category: Illustration</li>
+                  <li>Date: 2019</li>
+                  <li>Client: PlatCube</li>
+                  <li>Category: App Base Application</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -539,14 +507,17 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Miner Monitoring System</h2>
+                <p class="item-intro text-muted">코인 마이닝 모니터링 시스템</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-test.jpg" alt="">
+                <p>당시 대규모의 코인 마이닝팜의 개발요청에 따라 3000대 규모의 마이닝 서버를 연결하는 네트워크 시스템을 구축하였습니다.
+                  다양한 종류의 마이너의 온도, 채굴 속도, 오류 상황과 같은 다양항 정보를 실시간으로 모니터링 할 수 있는 시스템을 개발하였습니다.
+                  각각의 마이너는 24시간 원격으로 모니터링 및 제어할 수 있으며 최고 수준의 안정성을 갖는 보안 시스템을 구축하였습니다 
+                  비전문가도 기기의 상태를 정확하고 빠르게 체크할 수 있고 실시간으로 채산성을 확인할 수 잇는 UI/UX가 장점인 시스템입니다.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
+                  <li>Date: 2017</li>
+                  <li>Client: Lian GTC</li>
+                  <li>Category: WebBase Admin Page</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
